* Add -d flag to version.sh to output a Docker-friendly image tag, as   Docker is more restrictive than other parts of the system (notably, it   doesn't support plus signs '+' in versions, which makes version   metadata challenging).
* Add VERSION_DOCKER environment variable to master/Makefile and
  agent/Makefile, set by running version.sh -d, to pass to goreleaser
  for safe Docker version strings.

--- a/master/Makefile
+++ b/master/Makefile
@@ -10,6 +10,7 @@ GORELEASER = goreleaser
 
 export VERSION := $(shell ../version.sh)
 export VERSION_TAG:=$(shell ../version.sh -t)
+export VERSION_DOCKER := $(shell ../version.sh -d)
 
 export GO111MODULE := on
 
