--- a/agent/Makefile
+++ b/agent/Makefile
@@ -3,6 +3,8 @@ SHELL := bash
 
 export VERSION:=$(shell ../version.sh)
 export VERSION_TAG:=$(shell ../version.sh -t)
+export VERSION_DOCKER := $(shell ../version.sh -d)
+
 export GO111MODULE := on
 export DOCKER_REPO ?= determinedai
 
