--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -121,6 +121,10 @@ useNodePortForMaster: false
 #   autoProvisionUsers:
 #   groupsAttributeName:
 #   displayNameAttributeName:
+#   agentUidAttributeName:
+#   agentGidAttributeName:
+#   agentUserNameAttributeName:
+#   agentGroupNameAttributeName:
 #   alwaysRedirect:
 #   excludeGroupsScope:
 
@@ -147,6 +151,10 @@ useNodePortForMaster: false
 #   autoProvisionUsers:
 #   groupsAttributeName:
 #   displayNameAttributeName:
+#   agentUidAttributeName:
+#   agentGidAttributeName:
+#   agentUserNameAttributeName:
+#   agentGroupNameAttributeName:
 #   alwaysRedirect:
 
 # db sets the configurations for the database.
