--- a/helm/charts/determined/templates/master-config.yaml
+++ b/helm/charts/determined/templates/master-config.yaml
@@ -130,6 +130,7 @@ stringData:
       {{- end }}
       {{- if .Values.oidc.agentGroupNameAttributeName }}
       agent_group_name_attribute_name: {{ .Values.oidc.agentGroupNameAttributeName }}
+      {{- end }}
       {{- if .Values.oidc.alwaysRedirect }}
       always_redirect: {{ .Values.oidc.alwaysRedirect }}
       {{- end }}
@@ -177,6 +178,7 @@ stringData:
       {{- end }}
       {{- if .Values.saml.agentGroupNameAttributeName }}
       agent_group_name_attribute_name: {{ .Values.saml.agentGroupNameAttributeName }}
+      {{- end }}
       {{- if .Values.saml.alwaysRedirect }}
       always_redirect: {{ .Values.saml.alwaysRedirect }}
       {{- end }}
