--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -13,7 +13,7 @@ body:
         We have Slack community too.
 
         Feel free to join the community from
-        [here](https://join.slack.com/t/determined-community/shared_invite/zt-1f4hj60z5-JMHb~wSr2xksLZVBN61g_Q)
+        [here](https://determined-community.slack.com)
       placeholder: Ex. I have a question about...
     validations:
       required: true
