--- a/helm/charts/determined/templates/db-persistent-volume-claim.yaml
+++ b/helm/charts/determined/templates/db-persistent-volume-claim.yaml
@@ -3,7 +3,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: determined-db-pvc-{{ .Release.Name }}
+  name: 
+    {{ if and .Release.IsUpgrade .Values.db.restoreSnapshotSuffix }}
+    determined-db-pvc-{{ .Values.db.restoreSnapshotSuffix }}
+    {{- else -}}
+    determined-db-pvc-{{ .Release.Name }}
+    {{ end }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: determined-db-{{ .Release.Name }}
@@ -11,6 +16,12 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  {{- if and .Release.IsUpgrade  .Values.db.restoreSnapshotSuffix }}
+  dataSource:
+    name: determined-db-snapshot-{{ .Values.db.restoreSnapshotSuffix }}
+    kind: VolumeSnapshot
+    apiGroup: snapshot.storage.k8s.io
+  {{ end }}
   resources:
     requests:
       storage: {{ required  "A valid Values.db.storageSize entry is required!" .Values.db.storageSize }}
