--- a/helm/charts/determined/values.yaml
+++ b/helm/charts/determined/values.yaml
@@ -196,6 +196,22 @@ db:
   # resourceType: <secret/configMap>
   # certResourceName: <secret/configMap name>
 
+  # claimSuffix refers to the persistent volume claim name suffix for the database.
+  # If left undefined, a new PVC is created, named "determined-db-pvc-{{ .Release.name }}".
+  # Otherwise, use the PVC provided, given that it exists in the current context.
+  # claimSuffix:
+
+  # snapshotSuffix refers to the volume snapshot name suffix, a backup of Determined's database persistent volume.
+  # If defined, Helm will "snapshot" the DB upon its next upgrade, creating a volumeSnapshot called
+  # `determined-db-snapsnot-{{ .Values.snapshotSuffix}}`. This MUST NOT be the name of a persistent volume claim
+  # that already exists, such as `determined-db-pvc-{{Release.Name}}`.
+  # snapshotSuffix:
+
+  # restoreSnapshotSuffix refers to the volume snapshot name suffix which you wish to restore the database to.
+  # During an upgrade, a new persistent volume & claim will be created, named `determined-db-pvc-{{ .Values.restoreSnapshotSuffix}}`, 
+  # restoring the data from `determined-db-snapsnot-{{ .Values.restoreSnapshotSuffix}}`. MUST NOT be the name 
+  # of a persistent volume claim that already exists, e.g. the {{Release.Name}}.
+  # restoreSnapshotSuffix:
 
 # checkpointStorage controls where checkpoints are stored. Supported types include `shared_fs`,
 # `gcs`, and `s3`.
