--- a/master/.mockery.yaml
+++ b/master/.mockery.yaml
@@ -62,6 +62,12 @@ packages:
         config:
           filename: rm_authz_iface.go
           mockname: ResourceManagerAuthZ
+  github.com/determined-ai/determined/master/internal/configpolicy:
+    interfaces:
+      ConfigPolicyAuthZ:
+        config:
+          filename: config_policy_authz_iface.go
+          mockname: ConfigPolicyAuthZ
   github.com/determined-ai/determined/master/internal/task:
     interfaces:
       AllocationService:
