--- a/.circleci/real_config.yml
+++ b/.circleci/real_config.yml
@@ -4830,6 +4830,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           mark: e2e_cpu_rbac
           devcluster-config: single-rbac.devcluster.yaml
@@ -4841,6 +4842,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 6
           resource-class: xlarge
           tf2: true
@@ -4853,6 +4855,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 5
           resource-class: large
           tf2: true
@@ -4867,6 +4870,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           devcluster-config: oauth.devcluster.yaml
           mark: test_oauth
@@ -4879,6 +4883,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           devcluster-config: rbac-model-registry.yaml
           mark: test_model_registry_rbac
@@ -4891,6 +4896,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 4
           resource-class: large
           tf2: true
@@ -4908,6 +4914,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 4
           resource-class: large
           tf2: true
@@ -4923,6 +4930,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           tf2: true
           mark: e2e_multi_k8s
@@ -4938,6 +4946,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           mark: e2e_single_k8s
           target-stage: master
@@ -4951,6 +4960,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           devcluster-config: port-registry.devcluster.yaml
           mark: port_registry
@@ -4963,6 +4973,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           resource-class: large
           mark: e2e_cpu_elastic
@@ -4976,6 +4987,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           mark: e2e_cpu_postgres
           devcluster-config: postgres-with-ssl.devcluster.yaml
@@ -4989,6 +5001,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           mark: e2e_cpu_postgres
           devcluster-config: postgres-with-ssl.devcluster.yaml
@@ -5002,6 +5015,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           mark: e2e_cpu_postgres
           devcluster-config: custom-agent-version.devcluster.yaml
@@ -5015,6 +5029,7 @@ workflows:
           name: test-e2e-agent-connection-loss
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           mark: e2e_cpu_agent_connection_loss
           devcluster-config: agent-no-connection.devcluster.yaml
@@ -5031,6 +5046,7 @@ workflows:
             - dev-ci-cluster-default-user-credentials
           requires:
             - build-go-ee
+            - pull-main-docker-images
           parallelism: 1
           devcluster-config: saml.devcluster.yaml
           mark: e2e_saml
